--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -11,14 +11,17 @@ $grid-breakpoints: (
 
 // colors
 $gold: #ffe071;
+$gold-hvr: #9e8a42;
 $bckgrnd-drk: #363636;
+$white: #fff;
 
 // fonts/text
 // font size
+$font-family-liberation-arial-sans-serif: Courier New, "Liberation Sans", Arial,
+  sans-serif;
 $fnt-sz-sm: 0.7rem;
 $fnt-sz-md: 1rem;
 $fnt-sz-lg: 2rem;
-$fnt-sz-h1-sm: calc(0.375rem + 1vw);
 $txt-dec-und: underline;
 
 // nav
@@ -36,3 +39,7 @@ $jstcont-end: end;
 $dsp-flx-flx: flex;
 $flx-drct-rw: row;
 $flx-drct-cl: column;
+$algn-ctr: center;
+
+// width/height/breakpoints
+$wdth-sm: 250px;
