--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,10 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/bootstrap/scss/variables";
-@import "_profile.scss";
+@import "profile.scss";
 @import "_custom-variables";
 @import "_custom-navbar";
 body {
   font-family: $font-family-liberation-arial-sans-serif;
-}
-
-body {
   background: $bckgrnd-drk;
 }
 
@@ -42,4 +39,8 @@ form {
 
 .narrow-input {
   width: $wdth-sm; /* Adjust the width as needed */
+}
+
+footer .nav-link {
+  color: $white;
 }
