--- a/src/scss/_custom-navbar.scss
+++ b/src/scss/_custom-navbar.scss
@@ -1,7 +1,7 @@
 @import "../../node_modules/bootstrap/scss/navbar";
 
 nav {
-  background: $bckgrnd-drk;
+  background: $blue-bckg;
 }
 
 .nav-link {
