--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -4,3 +4,64 @@
   height: $hgth-pic;
   border-radius: $brdr-rdius-100;
 }
+
+.card img {
+  height: $hgth-pic;
+}
+
+.card-text {
+  color: $black;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.card-body,
+.card-text {
+  color: $gold;
+  background: $black;
+}
+
+.card-body img {
+  height: $post-pic-sm;
+  border-radius: $brdr-rdius-100;
+}
+
+.card-text {
+  color: $gold;
+}
+
+.card-text {
+  margin: $navbar-brand-padding-x;
+}
+
+.card-img-top {
+  width: $wdth-max;
+}
+
+.btn {
+  background: $black;
+  color: $gold;
+  border-color: $black;
+}
+
+.btn:hover {
+  background: $gold;
+  color: $black;
+  border-color: $black;
+}
+
+.heart-icon path {
+  fill: $pink;
+}
+
+.username {
+  //   color: $gold;
+  //   background-color: $black;
+  border-radius: $brdr-rdius-10;
+  //   font-weight: $fnt-wgth;
+}
