need to fix form ruins vh

--- a/src/scss/_custom-variables.scss
+++ b/src/scss/_custom-variables.scss
@@ -14,6 +14,7 @@ $gold: #ffe071;
 $gold-hvr: #9e8a42;
 $bckgrnd-drk: #363636;
 $white: #fff;
+$gray: #acacac;
 $black: #000;
 $blue-bckg: #151829;
 $pink: #eb1aa5;
