--- a/src/scss/profile.scss
+++ b/src/scss/profile.scss
@@ -29,6 +29,9 @@
 .card-body img {
   height: $post-pic-sm;
   border-radius: $brdr-rdius-100;
+  overflow: hidden;
+  width: 40px;
+  height: 40px;
 }
 
 .card-text {
